# level-3-orderbook

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
src/: main.cpp
src/book/: book.cpp  book.h  market.cpp  market.h
src/fd/: fd.cpp  fd.h
src/itch/: messages_auction.h  messages_orders.h  messages_stock.h  messages_system.h  messages_trade.h  parser.cpp  parser.h  types.h
src/util/: binary_io.h
tests/unit/: CMakeLists.txt  test_itch_parser.cpp  test_parser.cpp
